commit after conmtroller created for APIs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 
 
-mintyn.baseurl = "http://lookup.binlist.net/"
+mintyn.baseurl = "http://lookup.binlist.net/card-scheme/"
 
